# asky

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.agents/rules/: code-style-rules.md
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-brew.yml  release-crates.yml  release.yml
docs/product/: architecture.md  glossary.md
docs/product/features/assets/: prd.md  technical_design.md
docs/product/features/headless-cli/: prd.md  technical_design.md
docs/proposals/: enterprise-feature-pack.md  mcp-provider-expansion.md  planning.md  prd_mcp_vault.md  prd_skill_bundling.md  prd_telemetry.md
docs/superpowers/plans/: 2026-03-29-asky-tui-phase1.md  2026-03-30-asky-tui-phase2.md  2026-04-01-asky-tui-phase3.md  2026-04-06-clawhub-vault-integration.md
docs/superpowers/specs/: 2026-03-29-asky-tui-phase1-design.md  2026-03-30-asky-tui-phase2-design.md  2026-04-06-clawhub-vault-integration-design.md
src/: main.rs
src/app/: actions.rs  bootstrap.rs  bundling.rs  mod.rs  ports.rs  registry.rs
src/cli/: commands.rs  entry.rs  mod.rs
src/domain/: asset.rs  config.rs  hashing.rs  identity.rs  mcp.rs  mod.rs  paths.rs  scope.rs  telemetry.rs  validation.rs
src/infra/: mod.rs
src/infra/config/: mod.rs  toml_store.rs
src/infra/feature/: instruction.rs  mod.rs  skill.rs  stub.rs
src/infra/mcp/: mod.rs
src/infra/provider/: amp.rs  claude_code.rs  common.rs  firebender.rs  gemini.rs  github.rs  letta.rs  mod.rs  opencode.rs  snowflake.rs
src/infra/telemetry/: mod.rs  parser.rs  scanner.rs
src/infra/vault/: clawhub.rs  github.rs  local.rs  mod.rs
src/tui/: app.rs  event.rs  layout.rs  mod.rs  render.rs
src/tui/widgets/: analytics.rs  detail.rs  list.rs  mod.rs  modal.rs  status.rs  tabs.rs
src/tui/widgets/mcp/: mod.rs  (+1 more)
(+18 files in other folders)
